<resources>
    <string name="app_name">VMills</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_bold">Roboto-Bold</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_thin">sans-serif-thin</string>


    <string name="action_settings">Settings</string>

    <string name="user_name">User Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="signup"><u>Signup</u></string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="registered_successfully">hh</string>
    <string name="ok">ok</string>
    <string name="sku_scan">SKU Scan</string>
    <string name="tracking_scan">Tracking Scan</string>
    <string name="order_id">Order Id</string>
    <string name="search">Search</string>
    <string name="quantity">Quantity</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="_for">FOR</string>
    <string name="ex_mill">Ex-Mill</string>
    <string name="gross_weight">Gross Weight</string>
    <string name="tare_weight">Tare Weight</string>
    <string name="net_weight">Net Weight</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="del_typw">Delivery Type</string>
    <string name="select_party">Select Party</string>
    <string name="other_inward">Other Inward</string>
    <string name="select_cmdt">Select Commodity</string>
    <string name="bill_details">Bill Details</string>
    <string name="final_inward">Final Inward</string>
    <string name="party_detail">Party Detail</string>
    <string name="truck_no">Truck No.</string>
    <string name="date">Date</string>
    <string name="factory_unloading">Factory Unloading</string>
    <string name="invard_number">Invard Number</string>
    <string name="kanta_slip_number">Kanta Slip number</string>
    <string name="bill_no">Bill No.</string>
</resources>
