<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#888888">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_30dp"
            tools:context=".ui.enroll.register.RegisterActivity">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:background="@drawable/logo" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:paddingTop="@dimen/dimen_20dp"
                app:cardCornerRadius="@dimen/dimen_12dp"
                app:cardElevation="@dimen/dimen_8dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_30dp"
                    android:orientation="vertical">


                    <com.vmotors.ui.components.LEditText
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:maxLength="32"
                        android:textSize="14sp"
                        app:drawableLeft="@drawable/ic_email" />

                    <com.vmotors.ui.components.LEditText
                        android:id="@+id/tvPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        app:drawableLeft="@drawable/ic_password" />


                    <com.vmotors.ui.components.LECompatButton
                        android:id="@+id/tvLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_20dp"
                        android:background="@drawable/edditext_orange_bg_rectangle"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</layout>